convert site from blogofile to jekyll

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,7 +1,8 @@
-<%!
-	section = "devel"
-%>
-<%inherit file="_templates/site.mako" />
+---
+layout: default
+title: Devel
+group: Devel
+---
   <div class="row-fluid marketing">
     <div class="span12">
       <h2>kanla Development</h2>
