--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<%!
-	section = "intro"
-%>
-<%inherit file="_templates/site.mako" />
+---
+layout: default
+title: kanla
+group: Intro
+---
+
   <div class="jumbotron">
     <img src="/img/kanla-logo.svg" style="margin-bottom: 1em">
     <p>
