--- a/contact/index.html
+++ b/contact/index.html
@@ -1,7 +1,8 @@
-<%!
-	section = "contact"
-%>
-<%inherit file="_templates/site.mako" />
+---
+layout: default
+title: Contact
+group: Contact
+---
   <div class="row-fluid marketing">
     <div class="span12">
       <h2>Contact</h2>
