--- a/impress.html
+++ b/impress.html
@@ -1,7 +1,7 @@
-<%!
-	section = "impress"
-%>
-<%inherit file="_templates/site.mako" />
+---
+layout: default
+title: kanla
+---
 <div id="content">
 
 <h1>Impressum</h1>
